--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "eslint-plugin-node": "^4.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
+    "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
     "jsdoc": "^3.4.3",
     "json-loader": "^0.5.4",
     "lint-staged": "^3.3.1",
+    "logux-client": "logux/logux-client",
     "logux-core": "logux/logux-core",
     "logux-sync": "logux/logux-sync",
     "pre-commit": "^1.2.2",
     "rimraf": "^2.6.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.3.0",
+    "webpack-dev-server": "^2.4.1",
     "yaspeller-ci": "^0.2.0"
   },
   "scripts": {
@@ -43,7 +47,9 @@
     "test": "jest --coverage && yarn run lint && yarn run spellcheck",
     "prebundle": "webpack index.js bundle/index.js",
     "bundle": "gzip -9 -f bundle/index.js",
-    "postbundle": "ls -lh bundle/*.gz | awk '{print \"Size:\", $5\"B\"}'"
+    "postbundle": "ls -lh bundle/*.gz | awk '{print \"Size:\", $5\"B\"}'",
+    "demo": "webpack-dev-server --content-base ./build --config test/integration/webpack.config",
+    "demo-build": "node test/integration/build.js"
   },
   "jest": {
     "coverageThreshold": {
