Move test/integration to test/demo

--- a/package.json
+++ b/package.json
@@ -41,15 +41,14 @@
   "scripts": {
     "lint-staged": "lint-staged",
     "spellcheck": "yarn run docs && yaspeller-ci *.md docs/*.html",
-    "clean": "rimraf docs/ coverage/ bundle/",
+    "clean": "rimraf docs/ coverage/ bundle/ test/demo/build/",
     "lint": "eslint *.js test/*.js",
     "docs": "jsdoc --configure .jsdocrc *.js",
     "test": "jest --coverage && yarn run lint && yarn run spellcheck",
     "prebundle": "webpack index.js bundle/index.js",
     "bundle": "gzip -9 -f bundle/index.js",
     "postbundle": "ls -lh bundle/*.gz | awk '{print \"Size:\", $5\"B\"}'",
-    "demo": "webpack-dev-server --content-base ./build --config test/integration/webpack.config",
-    "demo-build": "node test/integration/build.js"
+    "demo": "webpack-dev-server --config test/demo/webpack.config"
   },
   "jest": {
     "coverageThreshold": {
