--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "eslint-plugin-jest": "^19.0.1",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-security": "^1.3.0",
     "eslint-plugin-standard": "^2.1.1",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
     "jsdoc": "^3.4.3",
