--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "devDependencies": {
     "docdash": "^0.4.0",
     "eslint": "^3.19.0",
-    "eslint-config-logux": "^9.0.0",
-    "eslint-config-standard": "^7.1.0",
+    "eslint-config-import": "^0.13.0",
+    "eslint-config-logux": "^11.0.1",
+    "eslint-config-standard": "^10.0.0",
     "eslint-plugin-es5": "^1.0.1",
     "eslint-plugin-jest": "^19.0.1",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-security": "^1.3.0",
-    "eslint-plugin-standard": "^2.1.1",
+    "eslint-plugin-standard": "^2.2.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
