Use spellchecker for demo page too

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "lint-staged": "lint-staged",
-    "spellcheck": "yarn run docs && yaspeller-ci *.md docs/*.html",
+    "spellcheck": "yarn run docs && yaspeller-ci *.md {docs,test/demo}/*.html",
     "clean": "rimraf docs/ coverage/ bundle/ test/demo/build/",
     "lint": "eslint *.js test/*.js",
     "docs": "jsdoc --configure .jsdocrc *.js",
