Try to fix spelling check on Travis CI

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "scripts": {
     "lint-staged": "lint-staged",
-    "spellcheck": "yarn run docs && yaspeller-ci *.md {docs,test/demo}/*.html",
+    "yaspeller": "yaspeller-ci *.md docs/*.html test/demo/*.html",
+    "spellcheck": "yarn run docs && yarn run yaspeller",
     "clean": "rimraf docs/ coverage/ bundle/ test/demo/build/",
     "lint": "eslint *.js test/*.js",
     "docs": "jsdoc --configure .jsdocrc *.js",
